HADOOP-19805. When creating a signer, if it is Configurable, set its config.
In createHttpSigner, call setConf(conf) when the HTTP signer implements Configurable; use getDeclaredConstructor().newInstance() and ReflectiveOperationException.